kubernetes/apps/home-automation/zigbee2mqtt/zigbee2mqtt-deploy.yaml
# https://github.com/Koenkk/zigbee2mqtt/discussions/10899
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt
  namespace: home-automation
  labels:
    app: zigbee2mqtt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zigbee2mqtt
  template:
    metadata:
      labels:
        app: zigbee2mqtt
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      volumes:
      - name: zigbee2mqtt-volume
        persistentVolumeClaim:
          claimName: zigbee2mqtt-volume-pvc
      containers:
      - name: zigbee2mqtt
        image: koenkk/zigbee2mqtt:1.26.0
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: zigbee2mqtt-volume
          mountPath: /app/data
        securityContext:
          allowPrivilegeEscalation: false
---
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  namespace: home-automation
  labels:
    app: zigbee2mqtt
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: zigbee2mqtt
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: zigbee2mqtt-ingress
  namespace: home-automation
spec:
  ingressClassName: nginx-internal
  rules:
  - host: hass.${DOMAIN_NAME}
    http:
      paths:
      - path: /zigbee2mqtt(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: zigbee2mqtt
            port:
              number: 8080
  tls:
  - hosts:
    - hass.${DOMAIN_NAME}
